<resources>
    <string name="app_name">MILLEWS</string>
    <string name="millews">MILLEWS</string>
    <string name="header">A Millenial Plaform for being up to date</string>
    <string name="tv_emailSignIn">Email</string>
    <string name="tv_usernameSignIn">Username</string>
    <string name="tv_passwordSignIn">Password</string>
    <string name="tv_genderSignIn">Gender</string>
    <string name="login">Login</string>
    <string name="rad_male">Male</string>
    <string name="rad_female">Female</string>
    <string name="agree">I agree with the terms and conditions  that apply</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="account">Dont have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="tv_loginalt">OR LOGIN WITH</string>
    <string name="facebookicon">FacebookIcon</string>
    <string name="googleicon">GoogleIcon</string>
    <string name="editName">EDIT NAME</string>
    <string name="tv_nameInEditName">Name</string>
    <string name="suffixName">You can enter either your full name, nickname or suffix name</string>
    <string name="btn_submit">Submit</string>
    <string name="editEmail">EDIT EMAIL</string>
    <string name="tv_emailInEditEmail">Your Email</string>
    <string name="myProfile">My Profile</string>
    <string name="tv_nameprofile">Jonathan Leonardi</string>
    <string name="btn_editProfile">Edit Profile</string>
    <string name="editProfile">My Profile</string>
    <string name="tv_taptochange">Tap To Change</string>
    <string name="apaygdicari">Apa yang ingin kamu cari ?</string>
    <string name="rekomendasiartikel">Rekomendasi Artikel</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="judulArticle">Rossi Yakin Bisa Bersaing di MotoGP Qatar</string>
    <string name="keterangan">Valentino Rossi siap menghadapi seri pertama MotoGP Qatar. (Dorna Sports)</string>
    <string name="home">Home</string>
    <string name="international">Internasional</string>
    <string name="sport">Olahraga</string>
    <string name="travel">Travel</string>
    <string name="bookmark">BOOKMARK</string>
    <string name="main_profile">Welcome, Guest</string>
    <string name="main_content_1">Rossi Yakin Bisa Bersaing di MotoGP Qatar</string>
    <string name="main_category_1">Olahraga</string>
    <string name="travel_category_1">Travel</string>
    <string name="main_time_1">| 19 Menit Lalu</string>
    <string name="main_time_alt">Sabtu, 19/06/2021 22:53 WIB</string>
    <string name="bookmark_content_1">Bocoran Spesifikasi iPhone 13 Diduga Meluncur Tahun Ini</string>
    <string name="bookmark_content_2">Seohyun Siap Bintangi Film Romantis Bareng Lee Jun-young</string>
    <string name="bookmark_content_3">Detik-detik Kiper Sevilla Bobol Gawang Valladolid</string>
    <string name="bookmark_content_4">Niatnya berlibur, Enzy Storia malah menghubungi nasi padang.</string>
    <string name="bookmark_time_1">Rabu, 24/03/2021 08:05 WIB</string>
    <string name="bookmark_time_2">Selasa, 23/03/2021 09:15 WIB</string>
    <string name="bookmark_time_3">Minggu, 21/03/2021 05:54 WIB</string>
    <string name="bookmark_time_4">Jumat, 18/12/2020 13:44 WIB</string>
    <string name="utama_content_1">Mi Instan ‘Haute Couture’ ala Maisaon Margiela x Tommy Cash</string>
    <string name="utama_content_2">Chess.com: Elo Rating Dewa Kipas Merosot Saat Lawan Irene</string>
    <string name="category_content_1">10 Destinasi Wisata di Utrecht, Belanda Beragam!</string>
    <string name="berita_utama">BERITA UTAMA</string>
    <string name="berita_travel">BERITA TRAVEL LAINNYA</string>
    <string name="travel_lain_1">8 Wisata Pantai Tersembunyi di Malang</string>
    <string name="utama_content_messi_1">5 Momen yang Membuat Lionel Messi Hampir Hengkang dari Barcelona</string>
    <string name="utama_content_messi_2">5 Penyesalan Terbesar Lionel Messi Sepanjang Karier Sepak Bolanya</string>
    <string name="utama_content_messi_3">5 Pesepak Bola Top yang Tidak Cocok Bermain dengan Lionel Messi</string>
    <string name="error_login">Please fill email and password</string>
    <string name="ForgottenPassword">Forgotten Your Password ?</string>
    <string name="textForgotPassword">Enter your email address and we\'ll send you a link to reset your password</string>
    <string name="CheckEmail">Check Your Email</string>
    <string name="textCheckEmail">Reset Link has been sent to \n jonathanlh@gmail.com</string>
    <string name="error_login2">Please fill Username, Email, and Password</string>
    <string name="technology">Teknologi</string>
    <string name="gayaHidup">Gaya Hidup</string>
    <string name="travel_lain_rinjani">Info Pendakian Gunung Rinjani via Sembalun</string>
    <string name="main_time_rinjani">| 1 Hari Lalu</string>
    <string name="travel_lain_mentawai">Surga bagi Peselancar,  di Kepulauan Mentawai</string>
    <string name="main_time_mentawai">| 1 Hari Lalu</string>
    <string name="berita_lainnya">Berita Lainnya</string>
    <string name="utama_content_emas">Ahli Jelaskan Teori Munculnya Emas di Pantai Maluku</string>
    <string name="gemerlap_WismaAtlet">Gemerlap Lampu RS Wisma Atlet dan Hilir Mudik Pasien Covid-19</string>
    <string name="main_time_gemerlap_WismaAtlet">Sabtu, 19/06/2021 20:47 WIB</string>
    <string name="jerman_portugal">7 Alasan Jerman Bisa Kalahkan Portugal di Euro 2020</string>
    <string name="main_time_jerman_portugal">Sabtu, 19/06/2021 21:19 WIB</string>
    <string name="ikanCoelacanth">Ikan Purba Coelacanth Dapat Hidup Hingga 100 Tahun</string>
    <string name="main_time_ikanCoelacanth">Sabtu, 19/06/2021 21:35 WIB</string>
    <string name="main_time_rossi">Rabu, 24/03/2021 12:08 WIB</string>
    <string name="rossi">Rossi Yakin Bisa Bersaing di MotoGP Qatar</string>
    <string name="main_time_peristiwaBersejarah">| 13 menit lalu</string>
    <string name="main_content_peristiwaBersejarah">7 Peristiwa Bersejarah di Dunia pada Abad ke-20 </string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="category_internasional_nahkodaItalia">Kisah Jasad Nakhoda Italia Terdampar di Jakarta karena Corona</string>
    <string name="main_time_content_nahkodaItalia">| 43 Menit Lalu</string>
    <string name="internasional_pemungutansuaran_Iran">Pemungutan Suara di Iran Usai, Partisipasi Rendah Menghantui</string>
    <string name="main_time_unesco">Minggu, 20/06/2021 11:36 WIB</string>
    <string name="time_internasional_unesco">| 1 Jam Lalu</string>
    <string name="internasional_unesco">Mengenal Sejarah Berdirinya UNESCO dan 5 Program Prioritas</string>
    <string name="internasional_AS_kritik_pemiluIran">AS Kritik dan Tuding Ketidakadilan di Pemilu Iran</string>
    <string name="time_internasional_AS_kritik_pemiluIran">| 8 Jam Lalu</string>
    <string name="time_internasional_pemungutansuara_Iran">| 1 Hari Lalu</string>
    <string name="berita_internasional">Berita Internasional Lainnya</string>
    <string name="time_internasional_covidBrazil">| 5 Jam Lalu</string>
    <string name="internasional_covidBrazil">Kasus Kematian Akibat Covid-19 di Brasil Tembus 500 Ribu</string>
    <string name="category_olahraga_italia_euro2020">Klasemen Akhir Grup A Euro 2020: Italia Sempurna</string>
    <string name="olahraga">Olahraga</string>
    <string name="main_time_content_italia_euro2020">| 27 Menit Lalu</string>
    <string name="olahraga_marquez_menangis_menang">Marquez Sambil Menangis: Menang MotoGP Jerman Sangat Penting</string>
    <string name="time_olahraga_marquez_menangis_menang">| 10 Jam Lalu</string>
    <string name="time_olahraga_max_verstappen_menang_dramatis">| 9 Jam Lalu</string>
    <string name="time_olahraga_belgia_harus_menang_vs_Finlandia">| 7 Jam Lalu</string>
    <string name="olahraga_belgia_harus_menang_vs_Finlandia">Courtois: Belgia Wajib Juara Grup B Euro Lawan Finlandia</string>
    <string name="olahraga_max_verstappen_menang_dramatis">Hasil F1 GP Prancis: Max Verstappen Menang Dramatis</string>
    <string name="time_olahraga_KDB">| 15 Jam Lalu</string>
    <string name="olahraga_KDB">De Bruyne Hindari Sundul Bola Jelang Finlandia vs Belgia</string>
    <string name="technology_tamagochi">Tamagotchi Bakal Muncul Lagi, Jadi Smartwatch</string>
    <string name="main_time_content_tamagochi">| 18 Menit Lalu</string>
    <string name="berita_olahraga">Berita Olahraga Lainnya</string>
    <string name="berita_teknologi">Berita Teknologi Lainnya</string>
    <string name="technology_fitur_chat_wa_antar_platform">Kegunaan Fitur Transfer Chat WhatsApp antar Platform</string>
    <string name="time_technology_fitur_chat_wa_antar_platform">| 1 Jam Lalu</string>
    <string name="time_technology_tesla">| 19 Jam Lalu</string>
    <string name="time_technology_call_ring_wa">| 1 Hari Lalu</string>
    <string name="technology_tesla">Badan Keamanan AS Selidiki 10 Kematian Kecelakaan Tesla</string>
    <string name="technology_call_ring_wa">Perbedaan Calling dan Ringing di WhatsApp</string>
    <string name="technology_kuantum">Teknologi Kuantum, Masa Depan Internet yang Lebih Aman</string>
    <string name="time_technology_kuantum">| 1 Hari Lalu</string>
    <string name="berita_gayahidup">Berita Gaya Hidup Lainnya</string>
    <string name="gayaHidup_yoga_saat_pandemi">Hari Yoga: Menjaga Mental selama Pandemi dengan Yoga</string>
    <string name="main_time_content_yoga_saat_pandemi">| 46 Menit Lalu</string>
    <string name="gayaHidup_pasang_ring_setelah_serangan_jantung">Serangan Jantung Setelah Pasang Ring Jantung, Bisakah?</string>
    <string name="time_pasang_ring_setelah_serangan_jantung">| 1 Jam Lalu</string>
    <string name="gayaHidup_vitD">5 Asupan Vitamin D Selain Berjemur di Bawah Sinar Matahari</string>
    <string name="time_vitD">| 2 Jam Lalu</string>
    <string name="gayaHidup_kencan_pertama">5 Cara agar Kencan Pertama Berkesan dan Sukses</string>
    <string name="time_kencan_pertama">| 14 Jam Lalu</string>
    <string name="gayaHidup_pengganti_micin">7 Bahan Alternatif Pengganti Micin, Rasanya Tak Kalah Gurih</string>
    <string name="time_pengganti_micin">| 23 Jam Lalu</string>
</resources>