<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:text="@string/millews"
            android:textColor="#FF0000"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="291dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:text="@string/header"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/LL_usernameSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constrainedHeight="true">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/profile_icon"
                android:drawablePadding="10dp"
                android:gravity="center_horizontal|left|center_vertical"
                android:hint="Name"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_passwordSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_pass"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="10dp"
                android:gravity="center_horizontal|left|center_vertical"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="145dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:backgroundTint="#2E57EA" />

        <TextView
            android:id="@+id/tv_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/forgot_password"
            android:textColor="#000000"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="212dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="99dp"
                tools:layout_editor_absoluteY="553dp" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/sign_up"
                android:textColor="#0D82B6"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="254dp"
                tools:layout_editor_absoluteY="553dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_linear"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:text="@string/tv_loginalt"
                android:textAlignment="center"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon_fb"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/facebookicon"
                    app:srcCompat="@drawable/logo_fb" />

                <ImageView
                    android:id="@+id/icon_google"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/googleicon"
                    app:srcCompat="@drawable/logo_google" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>